Optimization up and running...

--- a/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_DETERMINISTIC/Latex_Parameter_Table.tex
+++ b/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_DETERMINISTIC/Latex_Parameter_Table.tex
@@ -4,24 +4,12 @@
 \begin{tabular}{p{5cm}lcccc}
 {\bf Model Parameter} & {\bf Symbol} & {\bf Min. Value} & {\bf Max. Value} & {\bf Value}\\
 \hline\hline
-Mu_0: Transition Rate 1st Group & $\mu_0$ & 0.00 & 1.00 & 0.50\\
-Gamma_0: Loss Rate 1st Group & $\gamma_0$ & 0.00 & 100.00 & 0.01\\
-k_0: Threshold Age 1st Group & $k_0$ & 0.00 & 100.00 & 10.00\\
-Mu_1: Transition Rate 2nd Group & $\mu_1$ & 0.01 & 10.00 & 0.50\\
-Gamma_1: Loss Rate 2nd Group & $\gamma_1$ & 0.01 & 10.00 & 0.01\\
-k_1: Threshold Age 2nd Group & $k_1$ & 0.00 & 0.00 & 100.00\\
-Mu_2: Transition Rate 3rd Group & $\mu_2$ & 0.00 & 50.00 & 0.10\\
-Gamma_2: Loss Rate 3rd Group & $\gamma_2$ & 0.00 & 10.00 & 0.10\\
-k_2: Threshold Age 3rd Group & $k_2$ & 0.00 & 10.00 & 0.00\\
-Mu_3: Transition Rate 4th Group & $\mu_3$ & 0.00 & 2.00 & 0.10\\
-Gamma_3: Loss Rate 4th Group & $\gamma_3$ & 0.00 & 2.00 & 0.10\\
-k_3: Threshold Age 4th Group & $k_3$ & 0.00 & 100.00 & 0.00\\
-Mu_4: Transition Rate 5th Group & $\mu_4$ & 0.00 & 1000.00 & 0.10\\
-Gamma_4: Loss Rate 5th Group & $\gamma_4$ & 0.00 & 100.00 & 0.10\\
-k_4: Threshold Age 5th Group & $k_4$ & 0.00 & 100.00 & 0.00\\
-No of GROUPS & $K$ & 0.00 & 0.00 & 2.00\\
-A_Rate: Downloading Rate & $A$ & 0.00 & 1.00 & 76.90\\
+Transition Rate 1st Group & $\mu_0$ & 0.00 & 1.00 & 0.50\\
+Loss Rate 1st Group & $\gamma_0$ & 0.00 & 100.00 & 0.01\\
+Threshold Age 1st Group & $k_0$ & 0.00 & 100.00 & 100.00\\
+No of GROUPS & $K$ & 0.00 & 0.00 & 1.00\\
+Downloading Rate & $A$ & 0.01 & 10.00 & 76.90\\
 \hline\hline
 \end{tabular}
-\caption{Model Parameters for the AIDS-HIV transmission model. Model parameters boundary values defined in a boundary file.}
+\caption{Model Parameters for the model}
 \end{table}
