--- a/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_DETERMINISTIC/Latex_Parameter_Table.tex
+++ b/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_DETERMINISTIC/Latex_Parameter_Table.tex
@@ -4,11 +4,17 @@
 \begin{tabular}{p{5cm}lcccc}
 {\bf Model Parameter} & {\bf Symbol} & {\bf Min. Value} & {\bf Max. Value} & {\bf Value}\\
 \hline\hline
-Transition Rate 1st Group & $\mu_0$ & 0.00 & 1.00 & 0.50\\
-Loss Rate 1st Group & $\gamma_0$ & 0.00 & 100.00 & 0.01\\
-Threshold Age 1st Group & $k_0$ & 0.00 & 100.00 & 100.00\\
-No of GROUPS & $K$ & 0.00 & 0.00 & 1.00\\
-Downloading Rate & $A$ & 0.01 & 10.00 & 76.90\\
+Transition Rate 1st Group & $\mu_0$ & 0.00 & 1.00 & 5.00\\
+Loss Rate 1st Group & $\gamma_0$ & 0.00 & 100.00 & 0.10\\
+Threshold Age 1st Group & $k_0$ & 0.00 & 100.00 & 50.00\\
+Transition Rate 2nd Group & $\mu_1$ & 0.01 & 10.00 & 5.00\\
+Loss Rate 2nd Group & $\gamma_1$ & 0.01 & 10.00 & 0.01\\
+Threshold Age 2nd Group & $k_1$ & 0.00 & 0.00 & 50.00\\
+Transition Rate 3rd Group & $\mu_2$ & 0.00 & 50.00 & 5.00\\
+Loss Rate 3rd Group & $\gamma_2$ & 0.00 & 10.00 & 0.05\\
+Threshold Age 3rd Group & $k_2$ & 0.00 & 10.00 & 50.00\\
+No of GROUPS & $K$ & 0.00 & 0.00 & 3.00\\
+Downloading Rate & $A$ & 0.00 & 2.00 & 100.78\\
 \hline\hline
 \end{tabular}
 \caption{Model Parameters for the model}
