--- a/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_DETERMINISTIC/Latex_Parameter_Table.tex
+++ b/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_DETERMINISTIC/Latex_Parameter_Table.tex
@@ -4,15 +4,15 @@
 \begin{tabular}{p{5cm}lcccc}
 {\bf Model Parameter} & {\bf Symbol} & {\bf Min. Value} & {\bf Max. Value} & {\bf Value}\\
 \hline\hline
-Transition Rate 1st Group & $\mu_0$ & 0.00 & 1.00 & 1.98\\
-Loss Rate 1st Group & $\gamma_0$ & 0.00 & 100.00 & 0.04\\
+Loss Rate 1st Group & $\gamma_0$ & 0.00 & 1.00 & 0.06\\
 Threshold Age 1st Group & $k_0$ & 0.00 & 100.00 & 30.00\\
-Transition Rate 2nd Group & $\mu_1$ & 0.01 & 10.00 & 4.38\\
-Loss Rate 2nd Group & $\gamma_1$ & 0.01 & 10.00 & 0.01\\
-Threshold Age 2nd Group & $k_1$ & 0.00 & 0.00 & 1175.00\\
-Transition Rate 3rd Group & $\mu_2$ & 0.00 & 50.00 & 7.68\\
-Loss Rate 3rd Group & $\gamma_2$ & 0.00 & 10.00 & 0.03\\
-Threshold Age 3rd Group & $k_2$ & 0.00 & 10.00 & 1172.00\\
+Loss Rate 2st Group & $\gamma_1$ & 0.01 & 10.00 & 0.00\\
+Loss Rate 2st Group & $\gamma_1$ & 0.01 & 10.00 & 0.00\\
+Threshold Age 2st Group & $k_1$ & 0.00 & 10.00 & 1175.00\\
+Loss Rate 3nd Group & $\gamma_2$ & 0.00 & 50.00 & 7.50\\
+Loss Rate 3nd Group & $\gamma_2$ & 0.00 & 50.00 & 7.50\\
+Threshold Age 3nd Group & $k_2$ & 0.00 & 10.00 & 1172.00\\
+Loss Rate 4st Group & $\gamma_3$ & 0.00 & 10.00 & 0.10\\
 No of GROUPS & $K$ & 0.00 & 0.00 & 3.00\\
 Downloading Rate & $A$ & 0.00 & 2.00 & 130.00\\
 \hline\hline
